--- a/package.json
+++ b/package.json
@@ -21,7 +21,11 @@
     },
     "dependencies": {
         "@vueuse/core": "^13.6.0",
+        "@vueuse/motion": "^3.0.3",
+        "clsx": "^2.1.1",
         "lucide-vue-next": "^0.539.0",
-        "radix-vue": "^1.9.17"
+        "radix-vue": "^1.9.17",
+        "tailwind-merge": "^3.3.1",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
